@@ -1,8 +1,11 @@
 package org.vimeoid.connection;
 
 import java.io.IOException;
+import java.net.HttpURLConnection;
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 
 import org.apache.http.Header;
 import org.apache.http.HttpResponse;
@@ -14,7 +17,9 @@ import org.apache.http.impl.client.DefaultHttpClient;
 import org.apache.http.params.BasicHttpParams;
 import org.apache.http.params.HttpParams;
 import org.vimeoid.dto.simple.Video;
+import org.vimeoid.util.Dialogs;
 
+import android.content.Context;
 import android.net.Uri;
 import android.util.Log;
 
@@ -27,26 +32,60 @@ public class VimeoVideoRunner {
 	
 	private static final String QUALITY = "mobile";
 	
-	public static Uri askForVideoUri(Video video) throws VideoLinkRequestException {
-		final HttpClient client = new DefaultHttpClient();
-		
-		Log.d(TAG, "Creating Uri for video " + video.id);
-		
+	// FIXME: implement and do not pass context
+	public static Uri askForVideoUri(Context context, Video video) throws VideoLinkRequestException {
+
 		try {
-			final URI uri = new URI(VIDEO_STREAM_URL_PREFIX);			
+			URL url = new URL(VIDEO_STREAM_URL_PREFIX + "?quality=mobile&clip_id=14654242");
+
+			HttpURLConnection urlc = (HttpURLConnection) url.openConnection();
+			urlc.setRequestProperty("Host", "vimeo.com");
+			urlc.setRequestProperty("Connection", "close");
+			urlc.setRequestProperty("Referer", CALL_REFERRER);
+			urlc.setConnectTimeout(1000 * 30); // mTimeout is in seconds
+            urlc.connect();
+            
+            Dialogs.makeToast(context, "RespCode: " + urlc.getResponseCode());
+            
+            Dialogs.makeToast(context, "Location: " + urlc.getHeaderField("Location"));
+            
+            if (urlc.getResponseCode() == 320) {
+            	Log.d(TAG, "getResponseCode == 320");
+            	Dialogs.makeToast(context, "Success!!");
+                return null;
+            }
+        } catch (MalformedURLException e1) {
+                // TODO Auto-generated catch block
+            e1.printStackTrace();
+        } catch (IOException e) {
+                // TODO Auto-generated catch block
+            e.printStackTrace();
+        }
+		
+		try {			
+			final HttpClient client = new DefaultHttpClient();			
+			
+			Log.d(TAG, "Creating Uri for video " + video.id);			
+			
+			final URI uri = new URI(VIDEO_STREAM_URL_PREFIX + "?quality=mobile&clip_id=14654242");			
+			// final URI uri = new URI(VIDEO_STREAM_URL_PREFIX);			
 			final HttpUriRequest request = new HttpGet(uri);
 			
-			final HttpParams params = new BasicHttpParams();
+			/*final HttpParams params = new BasicHttpParams();
 			params.setParameter("quality", QUALITY);
 			params.setParameter("clip_id", String.valueOf(video.id));
-			request.setParams(params);
+			request.setParams(params); */
 			
-			request.setHeader("Referer", CALL_REFERRER);
+			request.setHeader("Host", "vimeo.com");
+			request.setHeader("Connection", "close");	
+			request.setHeader("Referer", CALL_REFERRER);		
 			
-			Log.d(TAG, "Request ready, performing response " + uri.toString() + " " + params.toString());
+			Log.d(TAG, "Request ready, performing response " + uri.toString());
 			
 			HttpResponse response = client.execute(request);
-	        Log.d(TAG, "Uri call executed: " + uri.toString() + " " + params.toString() + " [" + response.getStatusLine().getStatusCode() + "; " + response.getStatusLine().toString() + ']');
+	        Log.d(TAG, "Uri call executed: " + uri.toString() + " [" + response.getStatusLine().getStatusCode() + "; " + response.getStatusLine().toString() + ']');
+	        
+	        Dialogs.makeToast(context, "Uri call executed: " + uri.toString() + " [" + response.getStatusLine().getStatusCode() + "; " + response.getStatusLine().toString() + ']');
 			
 	        // check if 302
 	        Header[] location = response.getHeaders("Location");
